--- a/report/img/Nouveau document texte.tex
+++ b/report/img/Nouveau document texte.tex
@@ -1,10 +1,6 @@
+%INTRO
+Le nombre d'avion dans le ciel ne faisant que croître, des systèmes de surveillance du réseau aérien ont été mis en place pour garantir en autre la sécurité. Ainsi un système appelé ADS-B (Automatic Dependent Surveillance Broadcast) a été développer permettant aux avions de broadcaster des informations de vol telles que leur vitesse, leur altitude et leurs positions GPS.\\
+Ce projet a pour but de modéliser un émetteur ainsi qu'un récepteur de donnée ADS-B avec le logiciel MATLAB.\\
+Une première partie permettra de simuler théoriquement la couche physique de l'ADS-B et de tester ses performances vis à vis de perturbations de type bruitage et désynchronisation. Ensuite l'implémentation des algorithmes sous MATLAB sera expliquée et enfin les résultats obtenus seront présentés.
 
-
-
-
-
-% Implémentation
-
-
-
-\subsection{}
+%Conclusion
